src/applications/libguides/custom-styles.scss
/* ... */
body:not(.editmode) {
    sub,
    sup {
        font-size: smaller;
    }

    figure {
        margin-block: 1em;
        &.left,
        &.right {
          text-align: center;
          font-size: 14px;
          font-weight: 400;
          text-indent: 0;
          border: 1px solid $borders;
          border-radius: 4px;
          margin-top: 0;
          padding: 0.5em;
        }
        &.right {
          float: right;
          margin-right: 0.5rem;
        }
        &.left {
          float: left;
          margin-right: 2rem;
          margin-left: 0;
        }
    }

    // these tabs are expected to be removed eg MGTS1301 - Introduction to management
    #s-lg-tabs-container .nav-tabs > li > a,
    #s-lg-tabs-container .nav-tabs > .active > a {
        background-color: $uqBrandColour;
    }

    #s-lg-col-1 .uq-accordion__item {
        button h2,
        button h3,
        button h4,
        button h5 {
            margin-bottom: 0;
        }
        &.uq-accordion__item--is-open div div > :last-child {
            margin-bottom: 0;
        }
    }
}

body.editmode {
    .nav-tabs > li > a[aria-selected="false"]:hover {
        background-color: #51247a;
        color: white;
    }
    .s-lg-guide-admin-content,
    .s-lib-box-content {
        ol, ul {
            margin-left: 1rem
        }
    }
    .btn-close {
        font-size: 14px;
    }
}

